Fix weird stretching in mobile

--- a/landing.less
+++ b/landing.less
@@ -1,3 +1,8 @@
+/* Fix weird stretching */
+html,body {
+  height: 100% !important;
+  max-height: 100% !important;
+}
 
 .landing,
 #carousel-example-generic,
